update routes for user and recipe

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-DATABASE_URL=mongodb+srv://culinarian:sgmC9KdV84RCfmWX@sei-cca5k.azure.mongodb.net/recipes?retryWrites=true&w=majority
+# DATABASE_URL=mongodb+srv://culinarian:sgmC9KdV84RCfmWX@sei-cca5k.azure.mongodb.net/recipes?retryWrites=true&w=majority
+
+DATABASE_URL= "mongodb://localhost/recipes"
