--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-# DATABASE_URL=mongodb+srv://culinarian:sgmC9KdV84RCfmWX@sei-cca5k.azure.mongodb.net/recipes?retryWrites=true&w=majority
+# DATABASE_URL=# DATABASE_URL=mongodb+srv://foodie:7kpO39JMi37FZ6pC@sei-cca5k.azure.mongodb.net/recipes?retryWrites=true&w=majority
 
 DATABASE_URL= "mongodb://localhost/recipes"
